--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Cryptosphere-Whxs_pvps</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="Style.css" />
 <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -279,3 +279,4 @@ Today, the most recognized and widely used cryptocurrencies remain Bitcoin (BTC)
 
 </body>
 </html>
+
